ci(github): allow SonarCloud scanner to generate security events for vulnerabilities

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
 
     permissions:
       contents: read
+      security-events: write # Required by SonarCloud for reporting found security vulnerabilities
 
     steps:
       - name: Harden runner
